<resources>
    <string name="app_name">KotlinLearning</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okayla_15">Okayla (15%)</string>
    <string name="round_up_tip">Round up Tip?</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_service">How Was Service</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>

    <!-- affirmation string -->
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>

</resources>