<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".CalculatorTips">

        <ImageView
            android:id="@+id/icon_cost_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_store_24"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service_editTextLay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service_editTextLay" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service_editTextLay"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/icon_cost_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_how_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_room_service_24"
            app:layout_constraintBottom_toBottomOf="@id/sevice_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sevice_question" />

        <TextView
            android:id="@+id/sevice_question"
            style="@style/Widget.KotlinLearning.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_service"
            app:layout_constraintStart_toStartOf="@id/cost_of_service_editTextLay"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service_editTextLay" />

        <RadioGroup
            android:id="@+id/tip_optiion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/sevice_question"
            app:layout_constraintTop_toBottomOf="@id/sevice_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/option_eighty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okayla_15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_call_made_24"
            app:layout_constraintBottom_toBottomOf="@id/round_swicth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_swicth" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_swicth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_round_up"
            app:layout_constraintTop_toBottomOf="@id/tip_optiion" />

        <Button
            android:id="@+id/mButtonTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/round_swicth"
            app:layout_constraintTop_toBottomOf="@id/round_swicth" />

        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.KotlinLearning.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="tip amount : 10$"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mButtonTwo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>